<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/savecontacts_layout">


    <ImageView
        android:id="@+id/newContact_imageView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:contentDescription="@string/newContactImage"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <LinearLayout
        android:id="@+id/newContact_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newContact_TextInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@string/newContact_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hintInputText"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newContact_NumberInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newContact_PhoneNumberInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_smartphone_24"
                android:hint="@string/phoneNumber_hintInputText"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/newContact_EmailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/newContact_EmailAddressInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_baseline_email_24"
                android:hint="@string/emailAddress_hintInputText"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>





</LinearLayout>